TESTING 1 - Hero, Monster and Position

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'application'
+    id 'info.solidsoft.pitest' version '1.15.0'
 }
 
 application {
@@ -18,9 +19,15 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     implementation group: 'com.googlecode.lanterna', name: 'lanterna', version: '3.1.2'
+    testImplementation 'org.mockito:mockito-core:3.7.7'
 }
 
 test {
     useJUnitPlatform()
 }
+
+pitest {
+    junit5PluginVersion = '1.0.0'
+}
+
 
